# expression_library

./: CMakeLists.txt  README.md  ast_walk.dot  benchmark_results.txt  test_ast.dot
.github/workflows/: ci.yml
benchmarks/: memory_benchmark.c  time_benchmark.c
docs/: ALGORITHMS.md  API.md  EXAMPLES.md  PERFORMANCE.md
examples/: ast_walk.c  basic_calc.c  benchmark_demo.c  symbolic_derivative.c  visualization_demo.c
include/: ast.h  conversion.h  expression.h  expression_core.h  expression_types.h  symbolic.h
scripts/: dot_to_png.sh  generate_plots.sh  run_benchmarks.sh  run_tests.sh
src/ast/: ast_build.c  ast_constant_fold.c  ast_eval.c  ast_prefix.c
src/conversion/: infix_eval.c  postfix_eval.c  shunting_yard.c  syntax_check.c
src/core/: benchmark.c  error.c  expression_api.c  memory.c  testing.c  visualization.c
src/symbolic/: differentiate.c  equal.c  simplify.c  substitute.c
tests/: test_api.c  test_ast.c  test_conversion.c  test_property.c  test_symbolic.c
